--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -54,8 +54,8 @@
 }
 
 .login-form .login-button {
-  margin: 25px auto;
-  width: 70%;
+  margin: 20px 60px;
+  width: 60%;
   border-radius: 20px;
   background-color: #11b4f8;
   color: #fff;
@@ -69,7 +69,6 @@
 .login-form .login-register {
   color: #9ea1a7;
   text-align: center;
-  margin-top: 20px;
 }
 
 .login-form .login-register-link {
